#=============================================================================== 
set(about_constructor
    about_constructor.cpp
)

add_executable(about_constructor ${about_constructor})
set_source_files_properties(about_constructor.h PROPERTIES LANGUAGE CXX)
#===============================================================================
