#=============================================================================== 
set(if_contain_func_foo
    if_contain_func_foo.h
)

add_executable(if_contain_func_foo ${if_contain_func_foo})
set_source_files_properties(if_contain_func_foo.h PROPERTIES LANGUAGE CXX)
#===============================================================================
